[package]
name = "device-detect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum="0.5"
tokio = { version = "1", features = ["full"] }
user-agent-parser = "0.3"
axum-macros = "0.2"
serde = { version = "1", features = ["derive"] }